WebClient Able to send end receive Json. TODO fix visualization

--- a/DesktopApp/DesktopApp.csproj
+++ b/DesktopApp/DesktopApp.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.AspNet.SignalR.Client, Version=2.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Client.2.2.2\lib\net45\Microsoft.AspNet.SignalR.Client.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.SignalR.Core.2.2.2\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
     </Reference>
@@ -85,11 +88,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Commands\SendMessageCommand.cs" />
-    <Compile Include="Commands\StartServerCommand.cs" />
+    <Compile Include="Commands\RelayCommand.cs" />
+    <Compile Include="Commands\ReleayCommandAsync.cs" />
     <Compile Include="Converters\MethodToValueConverter.cs" />
     <Compile Include="DesktopHub.cs" />
     <Compile Include="Converters\ParameterConverter.cs" />
+    <Compile Include="Services\CommunicationService.cs" />
+    <Compile Include="Services\ICommunicationService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
