--- a/DesktopApp/packages.config
+++ b/DesktopApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
