--- a/WebAppClient/WebAppClient.csproj
+++ b/WebAppClient/WebAppClient.csproj
@@ -81,6 +81,7 @@
     <Content Include="Scripts\jquery-1.6.4.min.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.min.js" />
+    <Content Include="Scripts\webApp.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
